Signed-off-by: Li Shouyang <lsylsy2@gmail.com>

--- a/neet/WebContent/customer.htm
+++ b/neet/WebContent/customer.htm
@@ -5,9 +5,9 @@
     <body>
         <form id="menu">
         <select name="bread" id="bread">
-            <option value="0">кихМцФ╟Э</option>
-            <option value="1">╟вцФ╟Э</option>
-            <option value="2">╬ч╡кр╤</option>
+            <option value="0">Ф²╬Х╫╞И²╒Е▄┘</option>
+            <option value="1">Г≥╫И²╒Е▄┘</option>
+            <option value="2">Е╥╗Х▐°Е▐╤</option>
         </select>
         </form>
         <script src="/js/jquery-2.1.0.min.js"></script>
