--- a/neet/WebContent/customer.htm
+++ b/neet/WebContent/customer.htm
@@ -14,7 +14,7 @@
         <script src="/js/name.js"></script>
         <script>
             //download name array
-            for (i=0;i<name.size();i++) {
+            for (i=0;i<menuname.length();i++) {
                 $("#menu").append($("<select/>").attr({
                     "id" : "menu"+i,
                     "name" : "menu" + i,
