--- a/neet/WebContent/customer.htm
+++ b/neet/WebContent/customer.htm
@@ -4,21 +4,15 @@
     </head>
     <body>
         <form id="menu">
-        <select name="bread" id="bread">
-            <option value="0">松软面包</option>
-            <option value="1">白面包</option>
-            <option value="2">巨菜叶</option>
-        </select>
         </form>
         <script src="/js/jquery-2.1.0.min.js"></script>
         <script src="/js/name.js"></script>
         <script>
             //download name array
-            for (i=0;i<menuname.length();i++) {
-                $("#menu").append($("<select/>").attr({
-                    "id" : "menu"+i,
-                    "name" : "menu" + i,
-                }));
+            for (i=0;i<menuname.length;i++) {
+                $("#menu").append($("<select/>").attr("id":"menu"+i));
+                for (j=0;j<menuname[i].length;j++)
+                    $("#menu"+i).append($("<option/>").attr({"value":j}).html(menuname[i][j]));
             }
         </script>
     </body>
