Signed-off-by: Li Shouyang <lsylsy2@gmail.com>

--- a/neet/WebContent/customer.htm
+++ b/neet/WebContent/customer.htm
@@ -10,9 +10,10 @@
         <script>
             //download name array
             for (i=0;i<menuname.length;i++) {
-                $("#menu").append($("<select/>").attr({"id":"menu"+i}));
-                for (j=0;j<menuname[i].length;j++)
+                $("#menu").append(menuname[i][0]).append($("<select/>").attr({"id":"menu"+i}));
+                for (j=1;j<menuname[i].length;j++)
                     $("#menu"+i).append($("<option/>").attr({"value":j}).html(menuname[i][j]));
+                $("#menu").append($("<br/>"));
             }
         </script>
     </body>
