Signed-off-by: Li Shouyang <lsylsy2@gmail.com>

--- a/neet/WebContent/customer.htm
+++ b/neet/WebContent/customer.htm
@@ -10,17 +10,33 @@
         <script src="/js/jquery-2.1.0.min.js"></script>
         <script src="/js/name.js"></script>
         <script>
+            function setmenu(a) {
+                for (i=0;i<a.length;i++) {
+                    $("#menu"+i).val(a[i]);
+                }
+            }
+        
             //we should download name array here
             //load menu
             for (i=0;i<menuname.length;i++) {
-                $("#menu").append(menuname[i][0]).append($("<select/>").attr({"id":"menu"+i}));
-                for (j=1;j<menuname[i].length;j++)
+                $("#menu").append(category[i]).append($("<select/>").attr({"id":"menu"+i}));
+                for (j=0;j<menuname[i].length;j++)
                     $("#menu"+i).append($("<option/>").attr({"value":j}).html(menuname[i][j]));
                 $("#menu").append($("<br/>"));
             }
             //load chef recommandation
             $.get("/api/customer/chef",function(data) {
-                console.log(data);
+                menurecommand=JSON.parse(data);
+                for (i=0;i<menurecommand.length;i++) {
+                    $("#recommandations").append($("<li/>").attr({"id":"recommand"+i}).html(menurecommand[i].name));
+                    $("#recommand"+i).append($("<ul/>").attr({"id":"recommandul"+i}));
+                    for (j=0;j<menurecommand[i].recipe.length;j++)
+                        $("#recommandul"+i).append($("<li/>").html(menuname[j][menurecommand[i].recipe[j]]));
+                    $("#recommand"+i).append($("<button/>")
+                                              .attr({"onclick":"setmenu(["+menurecommand[i].recipe.toString()+"])"})
+                                              .html("尝尝这个！")
+                    );
+                }
             });
         </script>
     </body>
