Signed-off-by: Li Shouyang <lsylsy2@gmail.com>

--- a/neet/WebContent/customer.htm
+++ b/neet/WebContent/customer.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <form id="menu" onsubmit="submitmenu()" target="#">
-            User ID<input type="text" name="userid" id-"userid"><br />
+            User ID<input type="text" name="userid" id="userid"><br />
         </form>
         <ol id="recommandations">
         </ol>
