--- a/neet/WebContent/customer.htm
+++ b/neet/WebContent/customer.htm
@@ -12,7 +12,7 @@
         <script src="/js/name.js"></script>
         <script>
             function setmenu(a) {
-                for (i=0;i<a.length;i++) {
+                for (i=0;i<category.length;i++) {
                     $("#menu"+i).val(a[i]);
                 }
             }
@@ -31,7 +31,7 @@
         
             //we should download name array here
             //load menu
-            for (i=0;i<menuname.length;i++) {
+            for (i=0;i<category.length;i++) {
                 $("#menu").append(category[i]).append($("<select/>").attr({"id":"menu"+i}));
                 for (j=0;j<menuname[i].length;j++)
                     $("#menu"+i).append($("<option/>").attr({"value":j}).html(menuname[i][j]));
