--- a/neet/WebContent/customer.htm
+++ b/neet/WebContent/customer.htm
@@ -21,10 +21,10 @@
                 userid=$("#userid").val();
                 a=new Array();
                 for (i=0;i<category.length;i++) {
-                    a[i]=$("#menu"+i).val();
+                    a[i]=parseInt($("#menu"+i).val());
                 }
                 console.log(a,userid);
-                $.post("/api/customer/new",{"id":userid,"order":JSON.stringify(a)},function(data) {
+                $.post("/api/customer/new",{"id":userid,"order":a},function(data) {
                     console.log(data);
                 });
             }
