Signed-off-by: Li Shouyang <lsylsy2@gmail.com>

--- a/neet/WebContent/chef.htm
+++ b/neet/WebContent/chef.htm
@@ -3,7 +3,7 @@
     <head>
     </head>
     <body>
-        Chef ID<input type="text" name="chefid" id="chefid"><br />
+        Chef ID<input type="text" name="chefid" id="chefid" value="0"><br />
         <ul id="orders">
         </ul>
         <script src="/js/jquery-2.1.0.min.js"></script>
