--- a/neet/WebContent/courier.htm
+++ b/neet/WebContent/courier.htm
@@ -3,14 +3,14 @@
     <head>
     </head>
     <body>
-        Chef ID<input type="text" name="chefid" id="chefid" value="0"><br />
+        Courier ID<input type="text" name="courier" id="courier" value="0"><br />
         <ul id="orders">
         </ul>
         <script src="/js/jquery-2.1.0.min.js"></script>
         <script src="/js/name.js"></script>
         <script>
-            function finishorder(id) {
-                $.post("/api/cook/finish",{"orderid":id},function(data) {
+            function confirmorder(id) {
+                $.post("/api/courier/confirm",{"orderid":id},function(data) {
                     console.log(data);
                     if (data=="OK") {
                         $("#order"+id).hide();
@@ -19,9 +19,9 @@
             }
 
             function checkorder() {
-                chefid=parseInt($("#chefid").val());
+                chefid=parseInt($("#courier").val());
                 console.log("checking orders...");
-                $.get("/api/cook/order",{"id":chefid},function(data) {
+                $.get("/api/courier/getorder",{"id":chefid},function(data) {
                     if (data=="false") {
                         console.log("no new order!");
                         return;
@@ -30,9 +30,7 @@
                     console.log(data);
                     $("#orders").append($("<li/>").attr({"id":"order"+orderdata.orderId}).html("订单"+orderdata.orderId+"<br />"));
                     $("#order"+orderdata.orderId).append("顾客ID："+orderdata.customerId);
-                    $("#order"+orderdata.orderId).append($("<ol/>").attr({"id":"orderlist"+orderdata.orderId}));
-                    for (i=0;i<orderdata.recipe.length;i++)
-                        $("#orderlist"+orderdata.orderId).append($("<li/>").html(menuname[i][orderdata.recipe[i]]));
+                    $("#order"+orderdata.orderId).append("厨师ID："+orderdata.cookId);
                     $("#order"+orderdata.orderId).append($("<button/>")
                                               .attr({"onclick":"finishorder("+orderdata.orderId+")"})
                                               .html("完成订单")
