--- a/neet/WebContent/chef.htm
+++ b/neet/WebContent/chef.htm
@@ -32,7 +32,7 @@
                     $("#order"+orderdata.orderId).append("顾客ID："+orderdata.customerId);
                     $("#order"+orderdata.orderId).append($("<ol/>").attr({"id":"orderlist"+orderdata.orderId}));
                     for (i=0;i<orderdata.recipe.length;i++)
-                        $("#orderlist"+orderdata.orderId).append($("<li/>").html(menuname[i][orderdata.recipe[i]]));
+                        $("#orderlist"+orderdata.orderId).append($("<li/>").html(orderdata.recipe[i]));
                     $("#order"+orderdata.orderId).append($("<button/>")
                                               .attr({"onclick":"finishorder("+orderdata.orderId+")"})
                                               .html("完成订单")
