--- a/neet/WebContent/chef.htm
+++ b/neet/WebContent/chef.htm
@@ -10,7 +10,7 @@
         <br />
         <ul id="orders">
         </ul>
-        <script src="/js/jquery-2.1.0.min.js"></script>
+        <script src="/js/jquery.min.js"></script>
         <script src="/js/name.js"></script>
         <script>
         	var timer = null;
