--- a/neet/WebContent/customer.htm
+++ b/neet/WebContent/customer.htm
@@ -13,7 +13,7 @@
         </ol>
         <ol id="recommandations">
         </ol>
-        <script src="/js/jquery-2.1.0.min.js"></script>
+        <script src="/js/jquery.min.js"></script>
         <script src="/js/name.js"></script>
         <script>
             function setmenu(a) {
