--- a/neet/WebContent/courier.htm
+++ b/neet/WebContent/courier.htm
@@ -9,7 +9,7 @@
         </div>
         <ul id="orders">
         </ul>
-        <script src="/js/jquery-2.1.0.min.js"></script>
+        <script src="/js/jquery.min.js"></script>
         <script src="/js/name.js"></script>
         <script>
         	var timer = null;
