--- a/neet/WebContent/courier.htm
+++ b/neet/WebContent/courier.htm
@@ -22,9 +22,10 @@
       <div class="container">
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Courier</a></li>
-            <li><a href="/chef.htm">Chef</a></li>
-            <li><a href="/customer.htm">Customer</a></li>
+            <li class="active"><a href="/courier.htm">送餐员</a></li>
+            <li><a href="/chef.htm">厨师</a></li>
+            <li><a href="/customer.htm">顾客</a></li>
+            <li><a href="/nutritionist.htm">营养师</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
