Signed-off-by: Li Shouyang <lsylsy2@gmail.com>

--- a/neet/WebContent/nutritionist.htm
+++ b/neet/WebContent/nutritionist.htm
@@ -162,7 +162,7 @@
                 }
                 console.log(res,JSON.stringify(Array(res)));
                 if (submittype==0) {
-                    $.post("/api/diet/new", {"data":JSON.stringify(Array(res))}, function(data) {
+                    $.post("/api/diet/insert", {"data":JSON.stringify(Array(res))}, function(data) {
                         console.log(data);
                         $("#message").html(data);
                     });
